--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,17 @@
   "name": "lol-connections-backend",
   "version": "1.0.0",
   "description": "Backend server for League of Legends Connections game submissions",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^17.2.4",
+    "express": "^4.18.2",
+    "pg": "^8.18.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
